# CheckersEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bitboard.cpp  bitboard.hpp  checkers.cpp  checkers.hpp  constants.hpp  evaluate.cpp  evaluate.hpp  hashing.hpp  main.cpp  pos.cpp  pos.hpp  search.cpp  search.hpp  tree.hpp
debug/: CMakeCache.txt  Makefile  checkers  cmake_install.cmake
release/: CMakeCache.txt  Makefile  cmake_install.cmake
